# agency-workforce-os

./: .gitignore  README.md  agentRuntime.js  agentRuntime.ts  eventStore.js  eventStore.ts  executionEngine.js  executionEngine.ts  orchestrator.js  orchestrator.ts  package-lock.json  package.json  providerAdapters.js  providerAdapters.ts  server.js  server.ts  templateLocalization.ts  toolGateway.ts  tsconfig.client.json  tsconfig.json  types.ts
data/: state.json
desktop/: AgencyWorkstation.cmd  README.md  start-workstation.ps1  stop-workstation.ps1
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/client/: app.ts
tools/: import-agency-agents.js  import-agency-agents.ts
